<resources xmlns:ns1="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Inchoate</string>
    <string name="summary_hint">Stories of an extraordinary world</string>
    <string name="read_time_hint">5 min read</string>
    <string name="section_hint">China</string>
    <string name="item_today">Today</string>
    <string name="item_weekly">Weekly</string>
    <string name="item_bookmark">Bookmark</string>
    <string name="item_settings">Settings</string>
    <string name="article_text">Mandarins for Mandarin</string>
    <string name="weekly">Weekly</string>
    <string name="today">Today</string>
    <string name="section_menu">China</string>
    <string name="issue_date">Apr 11th 2020</string>
    <string name="magazine_headline">The crisis will change the world of commerce</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="settings">Settings</string>
    <string name="stream_audio">Stream Audio</string>
    <string name="download_audio">Download Audio</string>
    <string name="previous">Previous</string>
    <string name="listen_to_this_story">Listen to this story</string>
    <string name="table_of_contents">Table of Contents</string>
    <string name="contact_us">Contact us</string>
    <string name="notifications">Notifications</string>
    <string name="backgrounds_downloads">Backgrounds Downloads</string>
    <string name="background_downloads">Background Downloads</string>
    <string name="audio_auto_download">Audio Auto Download</string>
    <string name="text_size">Text Size</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="minutes_read"> min read</string>
    <string name="header_section">Sections</string>

    <!-- menu -->
    <string name="collect">collect</string>
    <string name="corral">corral</string>
    <string name="vocabulary_yard">yard</string>

    <string name="dark_mode_preference">dark_mode_preference</string>
    <string name="dark_mode_preference_title">Dark Mode</string>
    <string name="about">About</string>
    <string name="wifi_key">wifi_only</string>
    <string name="wifi_and_mobile_date_key">wifi_and_mobile_data</string>
    <string name="wifi">Wi-Fi only</string>
    <string name="wifi_and_mobile_date">Wi-Fi and Mobile data</string>

    <string name="bookmark_group_policy">Bookmark Sorted Policy</string>
    <string name="sorted_by_section_key">sorted_by_section</string>
    <string name="sorted_by_date_key">sorted_by_date</string>
    <string name="sorted_by_bookmark_date_key">sorted_by_bookmark_date</string>
    <string name="sorted_by_topic_key">sorted_by_bookmark_topic</string>

    <string name="sorted_by_section">Sorted By Section</string>
    <string name="sorted_by_date">Sorted by Published Date</string>
    <string name="sorted_by_bookmark_date">Sorted by Bookmark Date</string>
    <string name="sorted_by_topic">Sorted by Topic</string>


    <string name="vocabulary">hiatus</string>
    <string name="sentence_demo">THE PREMIER LEAGUE, the top tier of English football, is set to resume play on June 17th after a three-month, coronavirus-induced hiatus.</string>
    <string name="paragraph_demo">THE PREMIER LEAGUE, the top tier of English football, is set to resume play on June 17th after a three-month, coronavirus-induced hiatus. After considering several less desirable options—including awarding final league positions on a points-per-game basis and voiding the current season entirely—clubs eventually decided to play the remaining 92 matches behind closed doors over the next six weeks. The return to action, dubbed “Project Restart”, will give a boost to the country’s morale as well as to clubs’ bottom lines.</string>
    <string name="article_info">The Premier League will suffer a big financial hit from the pandemic</string>
</resources>
