<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/item_today"
        android:orderInCategory="0"
        android:icon="@mipmap/ic_launcher_round"
        android:title="@string/item_today"
        />
    <item android:id="@+id/item_weekly"
        android:orderInCategory="0"
        android:icon="@mipmap/ic_launcher_round"
        android:title="@string/item_weekly"
        />
    <item android:id="@+id/item_bookmark"
        android:icon="@mipmap/ic_launcher_round"
        android:orderInCategory="0"
        android:title="@string/item_bookmark"
        />
    <item android:id="@+id/item_setting"
        android:orderInCategory="0"
        android:icon="@mipmap/ic_launcher_round"
        android:title="@string/item_settings"
        />

</menu>