<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/vocabulary_card"
    android:orientation="vertical">

    <TextView
        android:id="@+id/vocabulary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@mipmap/article_share"
        android:paddingRight="30dp"
        android:paddingStart="20dp"
        android:background="@drawable/vocabulary_text"
        android:text="@string/app_name"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/sentence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:text="@string/sentence_demo"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/article_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:text="@string/article_info"
        android:background="@drawable/vocabulary_article_info"
        android:textColor="@color/red"
        android:textSize="20sp" />
</LinearLayout>