<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/weekly"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/magazine_cover"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="100dp"
            android:background="@mipmap/magazine_cover" />

        <TextView
            android:id="@+id/magazine_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_weight="1"
                android:paddingRight="15dp"
                android:gravity="end|center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:background="@mipmap/ic_launcher_round"
                    android:contentDescription="TODO"
                    android:gravity="end|center_vertical" />

                <TextView
                    android:id="@+id/stream_audio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:singleLine="true"
                    android:paddingLeft="5dp"
                    android:text="@string/stream_audio"
                    android:textSize="10sp"

                    tools:ignore="NestedWeights" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:paddingLeft="15dp"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:background="@mipmap/ic_launcher_round"
                    android:contentDescription="TODO" />

                <TextView
                    android:id="@+id/download_audio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:singleLine="true"
                    android:paddingLeft="5dp"
                    android:text="@string/download_audio"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/previous_edition"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/previous"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/issue_content_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:overScrollMode="never"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layoutManager="GridLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:ignore="MissingConstraints"
            tools:itemCount="20"
            tools:listitem="@layout/today_news"
            tools:spanCount="2" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>