<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">


        <ImageView
            android:id="@+id/magazine_cover"
            android:layout_width="250dp"
            android:layout_height="350dp"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/magazine_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <TextView
            android:id="@+id/issue_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginStart="70dp"
                android:gravity="end|center_vertical"
                android:orientation="horizontal"
                android:paddingRight="15dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:background="@mipmap/ic_launcher_round"
                    android:contentDescription="TODO"
                    android:gravity="end|center_vertical" />

                <TextView
                    android:id="@+id/stream_audio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingLeft="5dp"
                    android:singleLine="true"
                    android:text="@string/stream_audio"
                    android:textSize="10sp"
                    tools:ignore="NestedWeights" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:background="@mipmap/ic_launcher_round"
                    android:contentDescription="TODO" />

                <TextView
                    android:id="@+id/download_audio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:singleLine="true"
                    android:text="@string/download_audio"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1px"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/previous_edition"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/previous"
            android:textSize="20sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1px"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:background="@android:color/darker_gray" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>